# kaggle408

./: .gitignore  README.md  data_preprocess.py  generate_dpo_data.py  generate_sft_data.py  pyproject.toml  report.md  train_dpo.sh
.ipynb_checkpoints/: train_sft-checkpoint.sh
examples/: dpo.ipynb  inferenc.ipynb  sft.ipynb
prompt/: calculation_error.txt  clendata.txt  logical_fallacy.txt  process_error.txt
src/: dpo_generator.py  dpo_multi.py  sft_multi.py
